--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/node": "^17.0.21"
+    "@types/node": "^17.0.21",
+    "prettier": "2.5.1"
   }
 }
