--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@types/react-lottie": "^1.2.6",
     "aos": "^2.3.4",
     "framer-motion": "^6.2.8",
+    "lottie-react": "^2.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
-    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
